# nebuia_native_android

./: .gitignore  README.md  build.gradle  build.properties  gradle.properties  settings.gradle
.circleci/: config.yml
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: nebuia.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
nebuia_plugin/: .gitignore  build.gradle  build.properties  proguard-rules.pro
nebuia_plugin/src/main/: AndroidManifest.xml
nebuia_plugin/src/main/assets/: cropper.param  quality.param
nebuia_plugin/src/main/jni/: CMakeLists.txt  face.cpp  face.h  finger.cpp  finger.h  id.cpp  id.h
nebuia_plugin/src/main/jni/include/: document_extractor.h  face.h  finger.h  id.h  quality.h  utils.h
nebuia_plugin/src/main/jni/inference/: document_extractor.cpp  inference.cpp  inference.h  quality.cpp  quality.h
nebuia_plugin/src/main/jni/ncnn/arm64-v8a/include/ncnn/: platform.h
nebuia_plugin/src/main/jni/ncnn/armeabi-v7a/include/ncnn/: platform.h
nebuia_plugin/src/main/jni/ncnn/x86/include/ncnn/: platform.h
nebuia_plugin/src/main/jni/utils/: utils.cpp
nebuia_plugin/src/main/res/drawable/: action_camera.xml  bg_text_evidence.xml  button.xml  button_rounded.xml  camera.xml  camera_focus.xml  check_icon.xml  circle_back_button.xml  circle_border.xml  circle_green.xml  circle_red.xml  close_icon.xml  guidance_pill_bg.xml  ic_baseline_insert_drive_file_24.xml  (+14 more)
(+87 files in other folders)
